docs/apache-airflow-providers-google/10.25.0/_sources/_api/tests/system/google/cloud/vertex_ai/example_vertex_ai_hyperparameter_tuning_job/index.rst.txt
:py:mod:`tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job`
=========================================================================================

.. py:module:: tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Hyperparameter Tuning Job operations.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_hyperparameter_tuning_job_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: DISPLAY_NAME

   

.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME

   

.. py:data:: STAGING_BUCKET

   

.. py:data:: REPLICA_COUNT
   :value: 1

   

.. py:data:: MACHINE_TYPE
   :value: 'n1-standard-4'

   

.. py:data:: ACCELERATOR_TYPE
   :value: 'ACCELERATOR_TYPE_UNSPECIFIED'

   

.. py:data:: ACCELERATOR_COUNT
   :value: 0

   

.. py:data:: WORKER_POOL_SPECS

   

.. py:data:: PARAM_SPECS

   

.. py:data:: METRIC_SPEC

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

