docs/apache-airflow-providers-google/15.0.1/_sources/_api/tests/system/google/cloud/vertex_ai/example_vertex_ai_hyperparameter_tuning_job/index.rst.txt
tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job
===============================================================================

.. py:module:: tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Hyperparameter Tuning Job operations.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.ENV_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.PROJECT_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.DAG_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.REGION
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.DISPLAY_NAME
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.DATA_SAMPLE_GCS_BUCKET_NAME
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.STAGING_BUCKET
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.REPLICA_COUNT
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.MACHINE_TYPE
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.ACCELERATOR_TYPE
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.ACCELERATOR_COUNT
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.WORKER_POOL_SPECS
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.PARAM_SPECS
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.METRIC_SPEC
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.create_bucket
   tests.system.google.cloud.vertex_ai.example_vertex_ai_hyperparameter_tuning_job.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'vertex_ai_hyperparameter_tuning_job_operations'


.. py:data:: REGION
   :value: 'us-central1'


.. py:data:: DISPLAY_NAME
   :value: 'hyperparameter-tuning-job-Uninferable'


.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME
   :value: 'bucket_hyperparameter_tuning_job_Uninferable'


.. py:data:: STAGING_BUCKET
   :value: 'gs://bucket_hyperparameter_tuning_job_Uninferable'


.. py:data:: REPLICA_COUNT
   :value: 1


.. py:data:: MACHINE_TYPE
   :value: 'n1-standard-4'


.. py:data:: ACCELERATOR_TYPE
   :value: 'ACCELERATOR_TYPE_UNSPECIFIED'


.. py:data:: ACCELERATOR_COUNT
   :value: 0


.. py:data:: WORKER_POOL_SPECS

.. py:data:: PARAM_SPECS

.. py:data:: METRIC_SPEC

.. py:data:: create_bucket

.. py:data:: test_run

